--- a/ElCoffe/ElCoffe/ClientApp/package.json
+++ b/ElCoffe/ElCoffe/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "7.2.13",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+    "angular-bootstrap-md": "^7.5.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.0.1",
