--- a/ElCoffe/ElCoffe/ElCoffe.csproj
+++ b/ElCoffe/ElCoffe/ElCoffe.csproj
@@ -32,7 +32,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\_models\user.interface.ts" />
+    <None Remove="ClientApp\src\app\_services\users.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\_models\user.interface.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\_services\users.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
