--- a/ElCoffe/ElCoffe/appsettings.json
+++ b/ElCoffe/ElCoffe/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnectionString": "Server=tcp:vali-deploydbserver.database.windows.net,1433;Initial Catalog=Vali-deploy_db;Persist Security Info=False;User ID={your_username};Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
