--- a/ElCoffe/ElCoffe/web.config
+++ b/ElCoffe/ElCoffe/web.config
@@ -8,10 +8,12 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" />
+      <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false">
+        <environmentVariables />
+      </aspNetCore>
     </system.webServer>
   </location>
-   <system.web>
+  <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
