--- a/ElCoffe/ElCoffe/web.config
+++ b/ElCoffe/ElCoffe/web.config
@@ -9,12 +9,7 @@
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false">
-        <environmentVariables xdt:Transform="InsertIfMissing">
-          <environmentVariable name="Profile_Specific"
-                               value="Profile_Specific_Value"
-                               xdt:Locator="Match(name)"
-                               xdt:Transform="InsertIfMissing" />
-        </environmentVariables>
+        <environmentVariables />
       </aspNetCore>
     </system.webServer>
   </location>
@@ -92,4 +87,3 @@
     </providers>
   </entityFramework>
 </configuration>
-
