--- a/ElCoffe/ElCoffe/web.config
+++ b/ElCoffe/ElCoffe/web.config
@@ -70,6 +70,7 @@
   <connectionStrings>
     <!--add name="ElCoffeDB" connectionString="Server=tcp:elcoffeserver.database.windows.net,1433;Initial Catalog=ElCoffeDB;Persist Security Info=False;User ID=guci;Password=Petrina17@3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/-->
     <add name="Vali-deploy_db" connectionString="Server=tcp:vali-deploydbserver.database.windows.net,1433;Initial Catalog=Vali-deploy_db;Persist Security Info=False;User ID=guci;Password=Petrina17@3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <!--add name="Elcoffe" connectionString="Server=.;Database=ElCoffe;Trusted_Connection=True;MultipleActiveResultSets=true"/-->
   </connectionStrings>
   <entityFramework>
     <!--<contexts>
