--- a/ElCoffe/ElCoffe/appsettings.json
+++ b/ElCoffe/ElCoffe/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "SqlServerConnectionString": "Server=tcp:vali-deploydbserver.database.windows.net,1433;Initial Catalog=Vali-deploy_db;Persist Security Info=False;User ID=guci;Password=Petrina17@3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+     //"SqlServerConnectionString": "Server=.;Database=ElCoffe;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
